apps/siyuan/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
    name: siyuan
    namespace: default

spec:
    replicas: 1
    selector:
        matchLabels:
            app: siyuan
    template:
        metadata:
            labels:
                app: siyuan
        spec:
            enableServiceLinks: false
            containers:
                - name: siyuan
                  image: b3log/siyuan
                  args:
                      - serve
                      - --workspace=/data
                  ports:
                      - name: http
                        containerPort: 6806
                  volumeMounts:
                      - name: siyuan
                        mountPath: /data
            volumes:
                - name: siyuan
                  hostPath:
                      path: /var/data/siyuan
                      type: DirectoryOrCreate
