apps/siyuan/service.yaml
apiVersion: v1
kind: Service

metadata:
    name: siyuan
    namespace: default

spec:
    selector:
        app: siyuan
    ports:
        - name: http
          port: 6806
          targetPort: http
    type: ClusterIP
